--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,14 +1,11 @@
 server {
-    listen 80;
+    listen 80 443;
 
     # Change the localhost to your domain name
     server_name localhost;
 
-    auth_basic "Restricted Access";
-    auth_basic_user_file /etc/nginx/htpasswd.users;
-
     location / {
-        proxy_pass http://localhost:5601;
+        proxy_pass http://localhost:11434;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
