--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,73 +3,48 @@ services:
 # This is the OLLAMA Container
   ollama:
     container_name: ollama
-    image: ollama/ollama:${OLLAMA_TAG}
+    image: ollama/ollama
     volumes:
       - ./ollama:/root/.ollama
     tty: true
     restart: unless-stopped
     ports:
-      - ${OLLAMA_PORT}:11434
-    ## Uncomment the lines below if you have access to a GPU which will make processing faster, I have issues with NVIDIA drivers hence commenting it out
-    # deploy:
-    #   resources:
-    #     reservations:
-    #       devices:
-    #         - driver: nvidia
-    #           count: 1
-    #           capabilities: [compute,video,graphics,utility]
+      - 11434:11434
+    # networks: 
+    #   - private
 
 # This is the OpenWebUI Container
   webui:
-    container_name: open-webui
     image: ghcr.io/open-webui/open-webui
+    container_name: open-webui
     volumes:
       - ./openui:/app/backend/data
     depends_on:
       - ollama
     ports:
-      - ${OPENUI_PORT}:8080
+      - 8080:8080
     environment:
-      - 'OLLAMA_BASE_URL=http://ollama:${OPENUI_PORT}'
-      - 'WEBUI_SECRET_KEY=${SECRET_KEY}' # change the secrete key before deployment in the env file
+      - 'OLLAMA_BASE_URL=http://ollama:11434'
+      - 'WEBUI_SECRET_KEY=cGFzc3dvcmQxMjNeJSQK'
     extra_hosts:
       - host.docker.internal:host-gateway
     restart: unless-stopped
+    # networks:
+    #   - private
 
-# This is the Nginx Web Server used as a Reverse Proxy
-  nginx:
-    container_name: nginx
-    image: nginx:${NGINX_TAG}
-    volumes:
-      - ./nginx/default.conf:/etc/nginx/nginx.conf
-      - ./nginx/certbot/conf:/etc/letsencrypt
-      - ./nginx/certbot/www:/var/www/certbot
-    ports:
-      - "${NGINX_HTTP}:80"
-      - "${NGINX_HTTP}:443"
-    depends_on:
-      - openui
-    restart: unless-stopped
-    networks:
-      - private
-      - OON
-
-# This is Lets Encrypt Container to download SSL/TLS that will be used in the nginx reverse proxy for security
-  certbot:
-    image: certbot/certbot
-    container_name: certbot
-    volumes:
-      - ./nginx/certbot/conf:/etc/letsencrypt
-      - ./nginx/certbot/www:/var/www/certbot
-    entrypoint: ./nginx/renew.sh     
-    restart: unless-stopped
-    networks:
-      - private
-
-networks:
-  private:
-    driver: bridge
-
-  OON:
-    driver: bridge
+  # web:
+  #   image: nginx:latest
+  #   ports:
+  #     - "80:80" 
+  #     - "443:443" 
+  #   volumes:
+  #     - ./nginx/default.conf:/etc/nginx/conf.d/default.conf 
+  #     # - ./certs:/etc/nginx/certs 
+  #   depends_on:
+  #     - ollama
+  #   networks:
+  #     - private
+    
+# networks:
+#   private:
 ...
