--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,20 +1,30 @@
 server {
-    listen 80 443;
+    listen 80; # Or 443 if using HTTPS
+    server_name gtp.lan; # Replace with your domain or IP address
 
-    # Change the localhost to your domain name
-    server_name localhost;
+    # If using HTTPS, uncomment the following lines and configure your SSL certificate
+    # listen 443 ssl;
+    # ssl_certificate /path/to/your/certificate.crt;
+    # ssl_certificate_key /path/to/your/private.key;
 
     location / {
-        proxy_pass http://localhost:11434;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
+        proxy_pass http://127.0.0.1:8080; 
         proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
-    }
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
 
-    location /health {
-    return 200 'OK';
-    add_header Content-Type text/plain;
-}
+        # Buffering settings (adjust as needed)
+        proxy_buffering on;
+        proxy_buffers 8 32k;
+        proxy_busy_buffers_size 64k;
+        proxy_read_timeout 60s; # Adjust timeout as needed
+        proxy_send_timeout 60s; # Adjust timeout as needed
+
+       # Optional: If your application uses WebSockets, add these lines:
+       # proxy_http_version 1.1;
+       # proxy_set_header Upgrade $upgrade;
+       # proxy_set_header Connection "upgrade";
+
+    }
 }
