--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
       - 8080:8080
     environment:
       - 'OLLAMA_BASE_URL=http://ollama:11434'
-      - 'WEBUI_SECRET_KEY=cGFzc3dvcmQxMjNeJSQK'
+      - 'WEBUI_SECRET_KEY=<secret_key>'
     extra_hosts:
       - host.docker.internal:host-gateway
     restart: unless-stopped
